--- a/_config.yml
+++ b/_config.yml
@@ -7,3 +7,10 @@ gist:
 kramdown:
   math_engine: mathjax
   syntax_highlighter: rouge 
+# GitHub Pages settings
+url: "https://liaddddd.github.io"
+baseurl: ""
+# SSL/HTTPS settings
+enforce_ssl: true
+# Build settings
+future: false 
